--- a/public/css/template-style.css
+++ b/public/css/template-style.css
@@ -2093,7 +2093,7 @@ div > iframe {
   width: 375px;
   margin-top: 15px;
   margin-bottom: 15px;
-  margin-left: -120px;
+  margin-left: -70px;
 }
 
 .iframe-div {
